src/test/ui/wf/wf-in-fn-where-clause.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-where-clause.rs:9:4
   |
LL | trait MustBeCopy<T:Copy> {
   | ------------------------ required by `MustBeCopy`
...
LL | fn bar<T,U>()
   |    ^^^ the trait `std::marker::Copy` is not implemented for `U`
LL |     where T: MustBeCopy<U>
   |                           - help: consider further restricting type parameter `U`: `, U: std::marker::Copy`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
